# wod-chargen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICES.md  README.md  archetype_weight_report.csv  index.html  pyproject.toml  pyscript.json  pyscript.toml
app/: component_registry.py  formatting.py  main.py  nav.py  strategy_content.py  strategy_page.py  weight_map.py  weight_map_data.py  wizard.py  wizard_state.py
docs/: VERSIONING.md  archetype-weight-guidelines.md  creation-weighting-strategy.md  discipline-clan-matrix.md  disciplines-review.md  share-schema-0.1.md  xp-strategy.md
reference/: README.md
scripts/: apply_archetype_themes.py  apply_copy.py  archetype_weight_report.py  build_loresheet_data.py  consolidate_archetypes.py  dev_server.py  discipline_power_coverage_report.py  discipline_power_descriptions.py  discipline_power_rules.py  enrich_discipline_powers.py  enrich_merits_flaws_descriptions.py  fetch_clan_symbols_wiki.py  generate_clan_symbols.py  generate_pyscript_config.py  generate_trait_tags.py  import_mes_tables.py  invert_clan_symbols.py  merit_flaw_rules.py  merits_flaws_descriptions.py  migrate_archetype_layout.py  resolve_discipline_labels.py  revise_subtypes.py  validate_archetype_biases.py  validate_archetypes.py
static/: app_router.js  strategy.css  theme.css  weight_map.css  weight_map.js
tests/: __init__.py  conftest.py  test_app_boot.py  test_archetype_weights.py  test_archetypes.py  test_backgrounds.py  test_base_creation.py  test_benefit_packages.py  test_browser_smoke.py  test_caitiff.py  test_clan_discipline_adapt.py  (+33 more)
(+172 files in other folders)
