[project]
name = "wod-chargen"
dynamic = ["version"]
description = "Browser-only WoD/MET procedural character generator"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "playwright>=1.40", "pillow>=10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "wod_chargen/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["wod_chargen"]

[tool.hatch.build.targets.sdist]
include = ["wod_chargen/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pypdf>=6.13.2",
]
